--- a/debian.qt/changelog
+++ b/debian.qt/changelog
@@ -1,3 +1,9 @@
+bitgesell-qt (0.1.11) UNRELEASED; urgency=low
+
+  * Bitcoin code synced
+
+ -- Mathias van Orton <it@bitgesell.ca>  Tue, 6 Feb 2024 15:35:00 +0000
+
 bitgesell-qt (0.1.10) UNRELEASED; urgency=low
 
   * Bitcoin code synced
