--- a/debian.qt/changelog
+++ b/debian.qt/changelog
@@ -1,5 +1,4 @@
-bitgesell (0.1.12) UNRELEASED; urgency=low
-
+bitgesell-qt (0.1.12) UNRELEASED; urgency=low
   * Bitcoin code synced
 
  -- Mathias van Orton <it@bitgesell.ca>  Mon, 29 Apr 2024 08:50:00 +0000
