--- a/debian.minimal/changelog
+++ b/debian.minimal/changelog
@@ -1,3 +1,9 @@
+bitgesell (0.1.13) UNRELEASED; urgency=low
+
+  * Bitcoin code synced
+
+ -- Mathias van Orton <it@bitgesell.ca>  Fri, 2 Aug 2024 08:50:00 +0000
+
 bitgesell (0.1.12) UNRELEASED; urgency=low
 
   * Bitcoin code synced
